<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/generator_root_view"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dennisjonsson.ngram.Avtivity.GeneratorActivity"
    android:id="@+id/generator_scroll_view"
    style="@style/main_style"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_marginTop="@dimen/progress_bar_margin_top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/generator_progressbar_container"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/generator_progressBar"
            android:layout_gravity="center_horizontal"
            android:progressDrawable="@drawable/spinner_progressbar"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <EditText
            style="@style/corpus"
            android:id="@+id/generator_corpus_textView"
            android:hint="@string/corpus_hint"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/generator_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                style="@style/button_1"
                android:id="@+id/generator_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/generate"
                android:layout_marginTop="@dimen/margin_small_item" />

            <TextView
                style="@style/label_1"
                android:id="@+id/generator_order_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/markov_order"
                android:labelFor="@+id/generator_order_seekbar"/>

            <SeekBar
                style="@style/number_seekbar_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/generator_order_seekbar"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/seekbar_1"/>

        </LinearLayout>



    </LinearLayout>
    </RelativeLayout>
    <!--android:layout_above="@id/generator_settings"-->
</ScrollView>
</RelativeLayout>