
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:id="@+id/result_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/main_style">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:id="@+id/result_progressBar_container"
            android:layout_marginTop="@dimen/progress_bar_margin_top"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="invisible"
            android:gravity="center_vertical">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/result_progressBar"
                android:layout_gravity="center_horizontal"
                android:progressDrawable="@drawable/spinner_progressbar"/>

            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.dennisjonsson.ngram.Avtivity.ResultActivity">
        <LinearLayout
            android:id="@+id/result_text_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="@dimen/large_button_padding_top"
            android:orientation="vertical">

            </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/result_settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <!--  android:paddingBottom="@dimen/activity_vertical_margin"-->

            <Button
                style="@style/button_1"
                android:id="@+id/result_regenerate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generate"
                android:layout_marginTop="@dimen/margin_small_item"
                android:layout_marginBottom="@dimen/large_button_margin_top"/>

            <TextView
                style="@style/label_1"
                android:id="@+id/result_length_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_length"
                android:labelFor="@+id/result_length_seekbar"/>

            <SeekBar
                style="@style/number_seekbar_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/result_length_seekbar"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/seekbar_1"/>

            <TextView
                style="@style/label_1"
                android:id="@+id/result_samples_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/samples"
                android:labelFor="@+id/result_samples_seekbar"/>

            <SeekBar
                style="@style/number_seekbar_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/result_samples_seekbar"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/seekbar_1"/>


        </LinearLayout>


    </LinearLayout>
    </RelativeLayout>
</ScrollView>
    <!--
    <LinearLayout
        android:id="@+id/result_floating_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:background="@drawable/wide_half_bg"
        android:visibility="gone">
        <Button
            style="@style/button_1"
            android:id="@+id/result_floating_regenerate_button"
            android:layout_marginTop="@dimen/margin_small_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate" />
    </LinearLayout>
    -->
</RelativeLayout>